--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <header class="sticky top-0 z-[9999]">
         <nav class="bg-[#E1F7F5]">
             <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
-                <a href="" class="flex items-center">
+                <a href="index.html" class="flex items-center">
                     <img src="img/Logo.png" alt="" class="h-10 md:h-20 scale-150 md:scale-100">
                 </a>
                 <button
@@ -58,7 +58,8 @@
                     <ul
                         class="font-medium flex flex-col md:p-0 mt-4 border border-gray-100 rounded-lg  md:flex-row md:gap-10 md:mt-0 lg:gap-14">
                         <li>
-                            <a href="#" class="block py-2 px-3 text-gray-900 rounded md:bg-transparent  md:md:py-1 "
+                            <a href="destination.html"
+                                class="block py-2 px-3 text-gray-900 rounded md:bg-transparent  md:md:py-1 "
                                 aria-current="page">Destinations</a>
                         </li>
                         <li>
