--- a/destination.html
+++ b/destination.html
@@ -3,84 +3,165 @@
 
 <head>
 
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-        <!-- GOOGLE FONT -->
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link
-            href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-            rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Montez&display=swap" rel="stylesheet">
+    <!-- GOOGLE FONT -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Montez&display=swap" rel="stylesheet" />
 
-        <!-- STYLE -->
-        <script src="https://cdn.tailwindcss.com"></script>
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
-        <link rel="stylesheet" href="style.css">
+    <!-- STYLE -->
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+    <link rel="stylesheet" href="style.css" />
 
-        <title></title>
-    </head>
+    <title></title>
+  </head>
 </head>
 
+<style>
+  * {
+    font-family: "poppins", sans-serif;
+  }
+
+  /* HERO */
+  .outline-text {
+    -webkit-text-fill-color: transparent;
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: #e1f7f5;
+  }
+
+  /* END HERO */
+</style>
+
 <body class="bg-[#E1F7F5]">
-    <!-- NAVBAR -->
-    <header class="sticky top-0 z-[9999]">
-        <nav class="bg-[#E1F7F5]">
-            <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
-                <a href="index.html" class="flex items-center">
-                    <img src="img/Logo.png" alt="" class="h-10 md:h-20 scale-150 md:scale-100">
-                </a>
-                <button
-                    class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden ">
-                    <span class="sr-only">Open main menu</span>
-                    <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none"
-                        viewBox="0 0 17 14">
-                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                            d="M1 1h15M1 7h15M1 13h15" />
-                    </svg>
-                </button>
-                <!-- dibagian ini kasi class HIDDEN -->
-                <div class=" w-full md:block md:w-auto " id="navbar-default">
-                    <ul
-                        class="font-medium flex flex-col md:p-0 mt-4 border border-gray-100 rounded-lg  md:flex-row md:gap-10 md:mt-0 lg:gap-14">
-                        <li>
-                            <a href="#" class="block py-2 px-3 text-gray-900 rounded md:bg-transparent  md:md:py-1 "
-                                aria-current="page">Destinations</a>
-                        </li>
-                        <li>
-                            <a href="#" class="block py-3 px-3 text-gray-900 rounded  md:py-1 ">Services</a>
-                        </li>
-                        <li>
-                            <a href="#" class="block py-2 px-3 text-gray-900 rounded  md:py-1 ">Accomodation</a>
-                        </li>
-                        <li>
-                            <a href="#" class="block py-2 px-3 text-gray-900 rounded  md:py-1 ">Activies</a>
-                        </li>
-                        <li class="">
-                            <a href="#"
-                                class="flex justify-center items-center mx-auto border-[#0E46A3] w-[50%] border-2 px-3 py-1 mt-5 md:mt-0 text-gray-900 rounded-md md:block md:w-full hover:bg-[#0E46A3] hover:text-[#E1F7F5] duration-300">
-                                Contact Us
-                            </a>
-                        </li>
-                    </ul>
-                </div>
+  <!-- NAVBAR -->
+  <header class="sticky top-0 z-[9999]">
+    <nav class="bg-[#E1F7F5]">
+      <div class="max-w-screen-xl flex flex-wrap items-center p-4 justify-between mx-auto">
+        <a href="index.html" class="flex items-center">
+          <img src="img/Logo.png" alt="" class="h-10 md:h-20 scale-150 md:scale-100" />
+        </a>
+        <button
+          class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden">
+          <span class="sr-only">Open main menu</span>
+          <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 17 14">
+            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+              d="M1 1h15M1 7h15M1 13h15" />
+          </svg>
+        </button>
+        <!-- dibagian ini kasi class HIDDEN -->
+        <div class="w-full md:block md:w-auto hidden" id="navbar-default">
+          <ul
+            class="font-medium flex flex-col md:p-0 mt-4 border border-gray-100 rounded-lg md:flex-row md:gap-10 md:mt-0 lg:gap-14">
+            <li>
+              <a href="#" class="block py-2 px-3 text-[#0E46A3] rounded md:bg-transparent md:md:py-1"
+                aria-current="page">Home</a>
+            </li>
+            <li>
+              <a href="destination.html"
+                class="block py-2 px-3 text-[#0E46A3] rounded md:bg-transparent md:md:py-1">Destinations</a>
+            </li>
+            <li>
+              <a href="#" class="block py-3 px-3 text-[#0E46A3] rounded md:py-1">Services</a>
+            </li>
+            <li>
+              <a href="#" class="block py-2 px-3 text-[#0E46A3] rounded md:py-1">Accomodation</a>
+            </li>
+            <li>
+              <a href="#" class="block py-2 px-3 text-[#0E46A3] rounded md:py-1">Activies</a>
+            </li>
+            <li class="">
+              <a href="#"
+                class="flex justify-center items-center mx-auto border-[#0E46A3] w-[50%] border-2 px-3 py-1 mt-5 md:mt-0 text-[#0E46A3] rounded-md md:block md:w-full hover:bg-[#0E46A3] hover:text-[#E1F7F5] duration-300">
+                Contact Us
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </header>
+  <!-- END NAVBAR -->
+  <main class="">
+    <section class="flex mx-auto my-5 max-w-screen-xl justify-between flex-col lg:flex-row px-4 py-2">
+      <h1 class="font-semibold text-3xl text-[#0E46A3] mb-2 lg:mb-0">
+        Destination Page
+      </h1>
+      <div class="flex flex-row gap-3">
+        <input type="text" placeholder="Search Destination..."
+          class="border bg-transparent border-[#0E46A3] rounded text-[#0E46A3] focus:outline-none  placeholder:text-sm placeholder:text-[#0E46A3] px-3 py-1" />
+
+        <select class="rounded bg-[#E1F7F5] text-[#0E46A3] border border-[#0E46A3]  focus:outline-none w-22 px-3 py-1"
+          name="" id="">
+          <option class="" value="" hidden>Filter</option>
+          <option value="">A - Z</option>
+          <option value="">Popular</option>
+        </select>
+      </div>
+    </section>
+    <section class="max-w-screen-xl flex items-center mx-auto">
+      <div class="flex flex-col lg:flex-row gap-5 mt-5 flex-auto md:p-3 items-center justify-between flex-wrap">
+        <div class="flex flex-col bg-white rounded-lg">
+          <!-- MASUKKAN DATA DAN PERULANGAN DISINI -->
+          <a href="detailpage.html">
+            <div class=" relative w-[350px] h-[200px] md:w-[400px] md:h-[250px] p-3">
+              <img src=" img/popular-image.jpg" class="w-full h-full object-cover rounded" />
+              <div
+                class="w-full h-full top-0 left-0 absolute flex flex-col justify-center items-center md:opacity-0 duration-[0.6s] md:hover:opacity-[1]">
+                <h1 class="font-['Montez'] text-[3rem] text-[#E1F7F5]">Jayapura</h1>
+              </div>
             </div>
-        </nav>
-    </header>
-    <!-- END NAVBAR -->
-    <main>
-        <section class="max-w-screen-xl mx-auto mt-20">
-            <div class="flex justify-end mr-5 md:mr-0">
-                <select class="px-3 py-2 rounded-md bg-[#E1F7F5] text-[#0E46A3] border border-[#0E46A3] " name="" id="">
-                    <option value="" hidden>Filter</option>
-                    <option value="">A - Z</option>
-                    <option value="">Popular</option>
-                </select>
+          </a>
+          <div class="flex justify-end lg:justify-between w-full">
+            <h1 class="hidden lg:block mx-5 mt-1 font-semibold text-xl">Jayapura</h1>
+            <a href="" class=" mb-5 bg-[#0E46A3] text-[#E1F7F5] text-sm px-3 py-2 rounded mx-3">View Detail <span> >
+              </span></a>
+          </div>
+        </div>
+        <div class="flex flex-col bg-white rounded-lg">
+          <!-- MASUKKAN DATA DAN PERULANGAN DISINI -->
+          <a href="detailpage.html">
+            <div class=" relative w-[350px] h-[200px] md:w-[400px] md:h-[250px] p-3">
+              <img src=" img/popular-image.jpg" class="w-full h-full object-cover rounded" />
+              <div
+                class="w-full h-full top-0 left-0 absolute flex flex-col justify-center items-center md:opacity-0 duration-[0.6s] md:hover:opacity-[1]">
+                <h1 class="font-['Montez'] text-[3rem] text-[#E1F7F5]">Jayapura</h1>
+              </div>
             </div>
-        </section>
-    </main>
+          </a>
+          <div class="flex justify-end lg:justify-between w-full">
+            <h1 class="hidden lg:block mx-5 mt-1 font-semibold text-xl">Jayapura</h1>
+            <a href="" class=" mb-5 bg-[#0E46A3] text-[#E1F7F5] text-sm px-3 py-2 rounded mx-3">View Detail <span> >
+              </span></a>
+          </div>
+        </div>
+        <div class="flex flex-col bg-white rounded-lg">
+          <!-- MASUKKAN DATA DAN PERULANGAN DISINI -->
+          <a href="detailpage.html">
+            <div class=" relative w-[350px] h-[200px] md:w-[400px] md:h-[250px] p-3">
+              <img src=" img/popular-image.jpg" class="w-full h-full object-cover rounded" />
+              <div
+                class="w-full h-full top-0 left-0 absolute flex flex-col justify-center items-center md:opacity-0 duration-[0.6s] md:hover:opacity-[1]">
+                <h1 class="font-['Montez'] text-[3rem] text-[#E1F7F5]">Jayapura</h1>
+              </div>
+            </div>
+          </a>
+          <div class="flex justify-end lg:justify-between w-full">
+            <h1 class="hidden lg:block mx-5 mt-1 font-semibold text-xl">Jayapura</h1>
+            <a href="" class=" mb-5 bg-[#0E46A3] text-[#E1F7F5] text-sm px-3 py-2 rounded mx-3">View Detail <span> >
+              </span></a>
+          </div>
+        </div>
+
+      </div>
+    </section>
+  </main>
 </body>
 
 </html>
